--- a/src/Components/Discover/Discover.scss
+++ b/src/Components/Discover/Discover.scss
@@ -104,9 +104,10 @@
                     position: absolute;
                     z-index: 2;
                     bottom: 0;
-                    width: 100%;
                     padding: 1rem 2rem 1rem;
-                    justify-content: left;
+                    justify-content: space-between;
+                    width: 85%;
+                    justify-content: space-between;
 
                     &::after {
                         content: " ";
@@ -120,27 +121,29 @@
                         z-index: -1;
                     }
 
-                    .text{
-                        gap: 0.5rem;
-                        color: var(--blackColor);
+                    .text {
+                        gap: 1rem;
+                        color: var(--whiteColor);
+                        font-size: var(--smallestFontSize);
 
-                        .name{
+                        .name {
                             display: block;
                             font-weight: 500;
                             padding-bottom: .3rem;
                             font-weight: var(--h2FontSize);
                         }
 
-                        .flex, .icon{
-                            font-size: var(--normalFontSize);
+                        .flex,
+                        .icon {
+                            font-size: var(--smallestFontSize);
                         }
                     }
-                    
-                    .rating{
+
+                    .rating {
                         padding: 8px 1rem;
                         border-radius: var(--borderRadius);
-                        background: rgba(245,245,245,0.37);
-                        border: 1.5px solid rgba(255,255,255,0.241);
+                        background: rgba(245, 245, 245, 0.37);
+                        border: 1.5px solid rgba(255, 255, 255, 0.241);
                         font-size: var(--h3FontSize);
                         font-weight: 600;
                         color: var(--blackColor);
