--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -41,7 +41,7 @@
   font-size: var(--h3FontSize);
   margin-left: 0.5rem;
 }
-@media screen {
+@media screen and (max-width: 767px) {
   .navBar .menu {
     position: absolute;
     width: 50%;
@@ -85,4 +85,42 @@
 }
 .navBar .showNavbar {
   top: 8rem;
+}
+
+@media screen and (min-width: 768px) {
+  .navBar .logoDiv span {
+    font-size: var(--h2FontSize);
+  }
+  .navBar .closeIcon,
+  .navBar .menuIcon {
+    display: none;
+  }
+  .navBar .menu ul {
+    display: flex;
+    gap: 1rem;
+  }
+  .navBar .menu ul li {
+    font-size: var(--h3FontSize);
+    font-weight: 500;
+    padding: 1rem 0rem;
+    text-align: center;
+    cursor: pointer;
+  }
+  .navBar .menu ul li:hover {
+    color: var(--primaryColor);
+    border-bottom: 1.5px solid var(--primaryColor);
+  }
+}
+@media screen and (min-width: 1240px) {
+  .navBar {
+    padding: 2rem 6rem;
+  }
+  .navBar .menu ul {
+    gap: 4rem;
+  }
+}
+@media screen and (mind-width: 1440px) {
+  .navBar {
+    padding: 2rem 14rem;
+  }
 }/*# sourceMappingURL=Navbar.css.map */
