--- a/src/Components/Middle/Middle.scss
+++ b/src/Components/Middle/Middle.scss
@@ -27,7 +27,7 @@ root {
 
     .secContainer{
         .grid{
-            padding: 3rem;
+            padding: 4px;
             border-radius: var(--borderRadius);
             background-color: var(--primaryColorLight);
             justify-content: center;
