--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -41,6 +41,13 @@
         }
     }
 
+    .sectionText {
+        position: absolute;
+        height: 100%;
+        top: 30%;
+        color: var(--whiteColor);
+        padding: 0 1.3rem;
+    }
 
     h1 {
         font-size: var(--biggestFontSize);
